--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -21,4 +21,4 @@ jobs:
         uses: actions/checkout@v2
       - name: Check version number
         run: |
-          python3 ci/check_version_number.py --branch ${GITHUB_REF##*/}
+          python3 ci/check_version_number.py --branch ${{ GITHUB_REF }}
