--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -34,6 +34,8 @@ jobs:
       cancel-in-progress: true
     runs-on: ubuntu-latest
     permissions:
+      contents: read
+      packages: write
       id-token: write
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
