--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+ansicon==1.89.0
+    # via jinxed
 arrow==1.2.3
     # via django-q
 asgiref==3.6.0
@@ -26,11 +28,13 @@ cffi==1.15.1
     #   weasyprint
 charset-normalizer==3.1.0
     # via requests
+colorama==0.4.6
+    # via qrcode
 coreapi==2.3.3
     # via -r requirements.in
 coreschema==0.0.4
     # via coreapi
-cryptography==3.4.8
+cryptography==40.0.1
     # via
     #   -r requirements.in
     #   pyjwt
@@ -150,6 +154,8 @@ itypes==1.2.0
     # via coreapi
 jinja2==3.1.2
     # via coreschema
+jinxed==1.2.0
+    # via blessed
 markdown==3.4.3
     # via django-markdownify
 markuppy==1.14
