--- a/requirements.in
+++ b/requirements.in
@@ -1,5 +1,5 @@
 # Please keep this list sorted - if you pin a version provide a reason
-Django>=3.2.14,<4                       # Django package
+Django                                  # Django package
 coreapi                                 # API documentation for djangorestframework
 cryptography>=40.0.0                    # Core cryptographic functionality
 django-allauth                          # SSO for external providers via OpenID
