--- a/requirements.in
+++ b/requirements.in
@@ -16,7 +16,7 @@ django-import-export                    # Data import / export for admin interfa
 django-maintenance-mode                 # Shut down application while reloading etc.
 django-markdownify                      # Markdown rendering
 django-money<3.0.0                      # Django app for currency management  # FIXED 2022-06-26 to make sure py-moneyed is not conflicting
-django-mptt==0.11.0                     # Modified Preorder Tree Traversal
+django-mptt                             # Modified Preorder Tree Traversal
 django-redis>=5.0.0                     # Redis integration
 django-q                                # Background task scheduling
 django-q-sentry                         # sentry.io integration for django-q
