--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -48,7 +48,7 @@ runs:
         if: ${{ inputs.python == 'true' }}
         shell: bash
         run: |
-          python3 -m pip install -U pip
+          python3 -m pip install pip==23.0.1
           pip3 install invoke wheel
       - name: Install Specific Python Dependencies
         if: ${{ inputs.pip-dependency }}
