use dev version of django for fix

--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ defusedxml==0.7.1
     #   python3-openid
 diff-match-patch==20200713
     # via django-import-export
-django==4.2
+django @ https://github.com/django/django/archive/stable/4.2.x.zip
     # via
     #   -r requirements.in
     #   django-allauth
