--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,9 +18,10 @@ repos:
     hooks:
     -   id: flake8
         additional_dependencies: [
+                'flake8-comprehensions',
                 'flake8-docstrings',
                 'flake8-string-format',
-                'pep8-naming ',
+                'pep8-naming'
         ]
 -   repo: https://github.com/pycqa/isort
     rev: '5.12.0'
