--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,7 @@ repos:
     hooks:
     -   id: flake8
         additional_dependencies: [
+                'flake8-bugbear',
                 'flake8-comprehensions',
                 'flake8-docstrings',
                 'flake8-string-format',
