check for clean imports

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,7 @@ repos:
                 'flake8-comprehensions',
                 'flake8-docstrings',
                 'flake8-string-format',
+                'flake8-tidy-imports',
                 'pep8-naming'
         ]
 -   repo: https://github.com/pycqa/isort
