only allow limited relative imports

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ per-file-ignores =
     __init__.py: D104
 max-complexity = 20
 docstring-convention=google
+ban-relative-imports = parents
 
 [coverage:run]
 source = ./InvenTree
