--- a/.github/workflows/check_docs_config.yaml
+++ b/.github/workflows/check_docs_config.yaml
@@ -28,4 +28,4 @@ jobs:
       - name: Check Links
         run: |
           pip install mkdocs-linkcheck requests
-          mkdocs-linkcheck docs -exclude README.md
+          mkdocs-linkcheck docs --exclude README.md
