--- a/.github/workflows/check_docs_config.yaml
+++ b/.github/workflows/check_docs_config.yaml
@@ -28,4 +28,4 @@ jobs:
       - name: Check Links
         run: |
           pip install linkcheckmd requests
-          python -m linkcheckmd docs --recurse -v
+          python -m linkcheckmd docs --recurse
