Ignore PRs which are just docs from release notes

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -4,6 +4,7 @@ changelog:
   exclude:
     labels:
       - translation
+      - documentation
   categories:
     - title: Breaking Changes
       labels:
