Check if doc links are broken (#4686)
* add check for links

* fix style

* call silently

* add dep

* add path

* ignore readme as it contains necesarry broken links

* fix syntax

* check recursevly

* run in sync

* use linkcheckmd instaead

* use sync

* add requests

* revert fix to check if checks still work

* fix lookup

* fix old link

* run check verbose

* run async

* remove recurse

* introduce error for test

* fix link

--- a/.github/workflows/check_docs_config.yaml
+++ b/.github/workflows/check_docs_config.yaml
@@ -1,4 +1,4 @@
-name: Documentation Config Checks
+name: Documentation Checks
 
 on:
   push:
@@ -21,7 +21,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Run Checks
+      - name: Check Config
         run: |
           pip install pyyaml
           python docs/ci/check_mkdocs_config.py
+      - name: Check Links
+        run: |
+          pip install linkcheckmd requests
+          python -m linkcheckmd docs --recurse
