--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -163,6 +163,7 @@ jobs:
       INVENTREE_DB_NAME: ./inventree.sqlite
       INVENTREE_DB_ENGINE: sqlite3
       INVENTREE_PLUGINS_ENABLED: true
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
@@ -172,16 +173,18 @@ jobs:
           apt-dependency: gettext poppler-utils
           dev-install: true
           update: true
-      - name: Coverage Tests
-        run: invoke coverage
       - name: Data Export Test
         uses: ./.github/actions/migration
       - name: Test Translations
         run: invoke translate
       - name: Check Migration Files
         run: python3 ci/check_migration_files.py
+      - name: Coverage Tests
+        run: invoke coverage
       - name: Upload Coverage Report
-        run: coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
   postgres:
     name: Tests - DB [PostgreSQL]
