--- a/InvenTree/company/fixtures/supplier_part.yaml
+++ b/InvenTree/company/fixtures/supplier_part.yaml
@@ -59,3 +59,11 @@
     part: 4
     supplier: 2
     SKU: 'R_4K7_0603'
+
+- model: company.supplierpart
+  pk: 6
+  fields:
+    part: 4
+    supplier: 2
+    SKU: 'R_4K7_0603.100PCK'
+    pack_size: 100
