make header more concise

--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -4,12 +4,9 @@ name: QC
 
 on:
   push:
-    branches-ignore:
-      - l10*
-
+    branches-ignore: ['l10*']
   pull_request:
-    branches-ignore:
-      - l10*
+    branches-ignore: ['l10*']
 
 env:
   python_version: 3.9
