--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -23,9 +23,12 @@ env:
 
 jobs:
   paths-filter:
+    name: Filter
     runs-on: ubuntu-latest
+
     outputs:
       server: ${{ steps.filter.outputs.server }}
+
     steps:
     - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
     - uses: dorny/paths-filter@v2
