--- a/.djlintrc
+++ b/.djlintrc
@@ -1,3 +1,3 @@
 {
-    "ignore": "D018,H006,H008,H020,H021,H023,H025,H029,H030,H031,T002"
+    "ignore": "D018,H006,H008,H020,H021,H023,H025,H030,H031,T002"
 }
