Add 'Tag' management (#4367)
* 'Tag' management
Fixes #83

* Add for ManufacturerPart, SupplierPart

* Add tags for StockLocation, StockItem

* fix serializer definition

* add migrations

* update pre-commit

* bump dependencies

* revert updates

* set version for bugbear

* remove bugbear

* readd bugbear remove isort

* and remove bugbear again

* remove bugbear

* make tag fields not required

* add ruleset

* Merge migrations

* fix migrations

* add unittest for detail

* test tag add

* order api

* reduce database access

* add tag modification test

* use overriden serializer to ensuer the manager is always available

* fix typo

* fix serializer

* increae query thershold by 1

* move tag serializer

* fix migrations

* content_types are changing between tests - removing them

* remove unneeded fixture

* Add basic docs

* bump API version

* add api access to the docs

* add python code

* Add tags to search and filters for all models

--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ django==3.2.18
     #   django-sql-utils
     #   django-sslserver
     #   django-stdimage
+    #   django-taggit
     #   django-user-sessions
     #   django-weasyprint
     #   django-xforwardedfor-middleware
@@ -124,6 +125,8 @@ django-sql-utils==0.6.1
 django-sslserver==0.22
     # via -r requirements.in
 django-stdimage==5.3.0
+    # via -r requirements.in
+django-taggit==3.1.0
     # via -r requirements.in
 django-user-sessions==2.0.0
     # via -r requirements.in
