--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,7 +40,8 @@
       "extensions": [
         "ms-python.python",
         "ms-python.vscode-pylance",
-        "batisteo.vscode-django"
+        "batisteo.vscode-django",
+        "eamodio.gitlens"
       ]
     }
   },
@@ -74,13 +75,14 @@
     "INVENTREE_BACKUP_DIR": "/workspaces/InvenTree/dev/backup",
     "INVENTREE_CONFIG_FILE": "/workspaces/InvenTree/dev/config.yaml",
     "INVENTREE_SECRET_KEY_FILE": "/workspaces/InvenTree/dev/secret_key.txt",
+    "INVENTREE_PLUGINS_ENABLED": "True",
     "INVENTREE_PLUGIN_DIR": "/workspaces/InvenTree/dev/plugins",
     "INVENTREE_PLUGIN_FILE": "/workspaces/InvenTree/dev/plugins.txt",
 
     // Python config
     "PIP_USER": "no",
 
-    // used to load the venv into the PATH and avtivate it
+    // used to load the venv into the PATH and activate it
     // Ref: https://stackoverflow.com/a/56286534
     "VIRTUAL_ENV": "/workspaces/InvenTree/dev/venv",
     "PATH": "/workspaces/InvenTree/dev/venv/bin:${containerEnv:PATH}"
