add missing triage:not-checked to documentation issue

--- a/.github/ISSUE_TEMPLATE/documentation.yaml
+++ b/.github/ISSUE_TEMPLATE/documentation.yaml
@@ -1,6 +1,6 @@
 name: "Documentation"
 description: "Create an issue to improve the documentation"
-labels: ["documentation"]
+labels: ["documentation", "triage:not-checked"]
 body:
   - type: markdown
     attributes:
