--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,6 @@
 # Please keep this list sorted - if you pin a version provide a reason
 # Django                                  # Django package
-https://github.com/django/django/archive/stable/4.2.x.zip
+django
 coreapi                                 # API documentation for djangorestframework
 cryptography>=40.0.0                    # Core cryptographic functionality
 django-allauth                          # SSO for external providers via OpenID
