--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ blessed==1.20.0
     # via django-q
 brotli==1.0.9
     # via fonttools
-certifi==2022.12.7
+certifi==2023.5.7
     # via
     #   requests
     #   sentry-sdk
@@ -42,9 +42,9 @@ defusedxml==0.7.1
     # via
     #   odfpy
     #   python3-openid
-diff-match-patch==20200713
+diff-match-patch==20230430
     # via django-import-export
-django @ https://github.com/django/django/archive/stable/4.2.x.zip
+django==4.2.1
     # via
     #   -r requirements.in
     #   django-allauth
@@ -89,13 +89,13 @@ django-dbbackup==4.0.2
     # via -r requirements.in
 django-error-report @ git+https://github.com/matmair/django-error-report@0.3.0
     # via -r requirements.in
-django-filter==23.1
+django-filter==23.2
     # via -r requirements.in
 django-formtools==2.4
     # via -r requirements.in
-django-ical==1.9.0
+django-ical==1.9.1
     # via -r requirements.in
-django-import-export==3.1.0
+django-import-export==3.2.0
     # via -r requirements.in
 django-js-asset==2.0.0
     # via django-mptt
@@ -125,7 +125,7 @@ django-sslserver==0.22
     # via -r requirements.in
 django-stdimage==5.3.0
     # via -r requirements.in
-django-taggit==3.1.0
+django-taggit==4.0.0
     # via -r requirements.in
 django-user-sessions==2.0.0
     # via -r requirements.in
@@ -231,16 +231,16 @@ redis==3.5.3
     # via
     #   django-q
     #   django-redis
-regex==2023.3.23
+regex==2023.5.5
     # via -r requirements.in
-requests==2.28.2
+requests==2.30.0
     # via
     #   coreapi
     #   django-allauth
     #   requests-oauthlib
 requests-oauthlib==1.3.1
     # via django-allauth
-sentry-sdk==1.20.0
+sentry-sdk==1.22.1
     # via
     #   -r requirements.in
     #   django-q-sentry
