--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,7 +10,7 @@ asgiref==3.6.0
     #   django
 build==0.10.0
     # via pip-tools
-certifi==2022.12.7
+certifi==2023.5.7
     # via
     #   -c requirements.txt
     #   requests
@@ -30,7 +30,7 @@ coveralls==2.1.2
     # via -r requirements-dev.in
 distlib==0.3.6
     # via virtualenv
-django @ https://github.com/django/django/archive/stable/4.2.x.zip
+django==4.2.1
     # via
     #   -c requirements.txt
     #   django-debug-toolbar
@@ -39,7 +39,7 @@ django-debug-toolbar==4.0.0
     # via -r requirements-dev.in
 django-slowtests==1.1.1
     # via -r requirements-dev.in
-django-test-migrations==1.2.0
+django-test-migrations==1.3.0
     # via -r requirements-dev.in
 docopt==0.6.2
     # via coveralls
@@ -52,7 +52,7 @@ flake8==6.0.0
     #   pep8-naming
 flake8-docstrings==1.7.0
     # via -r requirements-dev.in
-identify==2.5.22
+identify==2.5.24
     # via pre-commit
 idna==3.4
     # via
@@ -70,9 +70,9 @@ pep8-naming==0.13.3
     # via -r requirements-dev.in
 pip-tools==6.13.0
     # via -r requirements-dev.in
-platformdirs==3.2.0
+platformdirs==3.5.0
     # via virtualenv
-pre-commit==3.2.2
+pre-commit==3.3.1
     # via -r requirements-dev.in
 pycodestyle==2.10.0
     # via flake8
@@ -86,7 +86,7 @@ pyyaml==6.0
     # via
     #   -c requirements.txt
     #   pre-commit
-requests==2.28.2
+requests==2.30.0
     # via
     #   -c requirements.txt
     #   coveralls
@@ -107,7 +107,7 @@ urllib3==1.26.15
     # via
     #   -c requirements.txt
     #   requests
-virtualenv==20.22.0
+virtualenv==20.23.0
     # via pre-commit
 wheel==0.40.0
     # via pip-tools
