--- a/requirements.txt
+++ b/requirements.txt
@@ -154,6 +154,8 @@ icalendar==5.0.5
     # via django-ical
 idna==3.4
     # via requests
+importlib-metadata==6.6.0
+    # via markdown
 inflection==0.5.1
     # via drf-spectacular
 itypes==1.2.0
@@ -291,6 +293,8 @@ xlrd==2.0.1
     # via tablib
 xlwt==1.3.0
     # via tablib
+zipp==3.15.0
+    # via importlib-metadata
 zopfli==0.2.2
     # via fonttools
 
