--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -65,13 +65,15 @@ nav:
     - Configuration: start/config.md
     - Docker:
         - Introduction: start/docker.md
-        - Development: start/docker_dev.md
         - Production: start/docker_prod.md
+        - Development: start/docker_dev.md
     - Bare Metal:
         - Introduction: start/install.md
         - Installer: start/installer.md
-        - Development: start/development.md
         - Production: start/production.md
+        - Development: start/development.md
+    - Development:
+        - Devcontainer: start/devcontainer.md
     - Serving Files: start/serving_files.md
     - Data Backup: start/backup.md
     - Migrating Data: start/migrate.md
