--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -97,6 +97,7 @@ nav:
     - Test Results: stock/test.md
   - Build:
     - Build Orders: build/build.md
+    - Build Outputs: build/output.md
     - Allocating Stock: build/allocate.md
     - Bill of Materials: build/bom.md
     - Importing BOM Data: build/bom_import.md
