--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -99,6 +99,7 @@ nav:
     - Build Orders: build/build.md
     - Build Outputs: build/output.md
     - Allocating Stock: build/allocate.md
+    - Example: build/example.md
     - Bill of Materials: build/bom.md
     - Importing BOM Data: build/bom_import.md
     - Exporting BOM Data: build/bom_export.md
