Run CI if requirements files change

--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -37,6 +37,8 @@ jobs:
         filters: |
           server:
             - 'InvenTree/**'
+            - 'requirements.txt'
+            - 'requirements-dev.txt'
 
   pep_style:
     name: Style [Python]
