move devcontainer docs

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -73,7 +73,7 @@ nav:
         - Production: start/production.md
         - Development: start/development.md
     - Development:
-        - Devcontainer: start/devcontainer.md
+        - Devcontainer: develop/devcontainer.md
     - Serving Files: start/serving_files.md
     - Data Backup: start/backup.md
     - Migrating Data: start/migrate.md
