--- a/requirements.txt
+++ b/requirements.txt
@@ -186,6 +186,8 @@ pillow==9.5.0
     #   python-barcode
     #   qrcode
     #   weasyprint
+pint==0.21
+    # via -r requirements.in
 py-moneyed==1.2
     # via
     #   -r requirements.in
