Make nginx more clear that changing the port is 'dangerous' See https://github.com/inventree/InvenTree/issues/4859#issuecomment-1560025566

--- a/docker/production/nginx.prod.conf
+++ b/docker/production/nginx.prod.conf
@@ -24,8 +24,7 @@ server {
         proxy_buffering off;
         proxy_request_buffering off;
 
-        # Change 'inventree-server' to the name of the inventree server container,
-        # and '8000' to the INVENTREE_WEB_PORT (if not default)
+        # Do not touch this unless you have a specific reason - this and the docker-compose need to match
         proxy_pass http://inventree-server:8000;
     }
 
