--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -73,6 +73,10 @@ services:
         container_name: inventree-server
         # If you wish to specify a particular InvenTree version, do so here
         image: inventree/inventree:${INVENTREE_TAG:-stable}
+        # Only change this port if you understand the stack.
+        # If you change this you have to change:
+        # - the proxy settings (on two lines)
+        # - only change the exposed port - eg `1338:8000` if you want to expose the server on port 1338
         expose:
             - 8000
         depends_on:
