use 'navigation.instant'

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -30,6 +30,7 @@ theme:
   icon:
     repo: fontawesome/brands/github
   features:
+    - navigation.instant
     - navigation.tabs
     - toc.autohide
 edit_uri: "" # Disable "Edit" button
