--- a/InvenTree/company/fixtures/supplier_part.yaml
+++ b/InvenTree/company/fixtures/supplier_part.yaml
@@ -66,4 +66,5 @@
     part: 4
     supplier: 2
     SKU: 'R_4K7_0603.100PCK'
-    pack_size: 100
+    pack_quantity: '100'
+    pack_quantity_native: 100
