--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,13 +4,13 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in
 #
-asgiref==3.6.0
+asgiref==3.7.1
     # via
     #   -c requirements.txt
     #   django
 build==0.10.0
     # via pip-tools
-certifi==2022.12.7
+certifi==2023.5.7
     # via
     #   -c requirements.txt
     #   requests
@@ -35,11 +35,11 @@ django==3.2.19
     #   -c requirements.txt
     #   django-debug-toolbar
     #   django-slowtests
-django-debug-toolbar==4.0.0
+django-debug-toolbar==4.1.0
     # via -r requirements-dev.in
 django-slowtests==1.1.1
     # via -r requirements-dev.in
-django-test-migrations==1.2.0
+django-test-migrations==1.3.0
     # via -r requirements-dev.in
 docopt==0.6.2
     # via coveralls
@@ -52,7 +52,7 @@ flake8==6.0.0
     #   pep8-naming
 flake8-docstrings==1.7.0
     # via -r requirements-dev.in
-identify==2.5.22
+identify==2.5.24
     # via pre-commit
 idna==3.4
     # via
@@ -62,7 +62,7 @@ isort==5.12.0
     # via -r requirements-dev.in
 mccabe==0.7.0
     # via flake8
-nodeenv==1.7.0
+nodeenv==1.8.0
     # via pre-commit
 packaging==23.1
     # via build
@@ -70,9 +70,9 @@ pep8-naming==0.13.3
     # via -r requirements-dev.in
 pip-tools==6.13.0
     # via -r requirements-dev.in
-platformdirs==3.2.0
+platformdirs==3.5.1
     # via virtualenv
-pre-commit==3.2.2
+pre-commit==3.3.2
     # via -r requirements-dev.in
 pycodestyle==2.10.0
     # via flake8
@@ -90,7 +90,7 @@ pyyaml==6.0
     # via
     #   -c requirements.txt
     #   pre-commit
-requests==2.28.2
+requests==2.31.0
     # via
     #   -c requirements.txt
     #   coveralls
@@ -102,16 +102,19 @@ sqlparse==0.4.4
     #   django
     #   django-debug-toolbar
 tomli==2.0.1
-    # via build
-typing-extensions==4.5.0
+    # via
+    #   build
+    #   pyproject-hooks
+typing-extensions==4.6.2
     # via
     #   -c requirements.txt
+    #   asgiref
     #   django-test-migrations
-urllib3==1.26.15
+urllib3==1.26.16
     # via
     #   -c requirements.txt
     #   requests
-virtualenv==20.22.0
+virtualenv==20.23.0
     # via pre-commit
 wheel==0.40.0
     # via pip-tools
