--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -56,7 +56,7 @@ body:
     id: can-reproduce
     attributes:
       label: "I can reproduce this bug on the demo site."
-      description: "[InvenTree Demo](https://demo.inventree.org)"
+      description: "You can sign in at [InvenTree Demo](https://demo.inventree.org) with admin:inventree."
       options:
         - "Yes"
         - "No"
