--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -52,14 +52,13 @@ body:
       label: "Version Information"
       description: "The version info block."
       placeholder: "You can get this by going to the `About InvenTree` section in the upper right corner and clicking on the `copy version information` button"
-  - type: dropdown
+  - type: checkboxes
     id: can-reproduce
     attributes:
       label: "I can reproduce this bug on the demo site."
       description: "You can sign in at [InvenTree Demo](https://demo.inventree.org) with admin:inventree."
       options:
-        - "Yes"
-        - "No"
+        - label: "Yes"
     validations:
         required: true
   - type: textarea
