--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -56,7 +56,7 @@ body:
     id: can-reproduce
     attributes:
       label: "Please verify if you can reproduce this bug on the demo site."
-      description: "You can sign in at [InvenTree Demo](https://demo.inventree.org) with admin:inventree."
+      description: "You can sign in at [InvenTree Demo](https://demo.inventree.org) with admin:inventree. Note that this instance runs on the latest dev version, so your bug may be fixed there."
       options:
         - label: "I can reproduce this bug on the demo site."
   - type: textarea
