--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ coreapi==2.3.3
     # via -r requirements.in
 coreschema==0.0.4
     # via coreapi
-cryptography==41.0.0
+cryptography==41.0.1
     # via
     #   -r requirements.in
     #   pyjwt
@@ -154,6 +154,8 @@ icalendar==5.0.7
     # via django-ical
 idna==3.4
     # via requests
+importlib-metadata==6.6.0
+    # via markdown
 inflection==0.5.1
     # via drf-spectacular
 itypes==1.2.0
@@ -166,7 +168,7 @@ markdown==3.4.3
     # via django-markdownify
 markuppy==1.14
     # via tablib
-markupsafe==2.1.2
+markupsafe==2.1.3
     # via jinja2
 oauthlib==3.2.2
     # via requests-oauthlib
@@ -242,7 +244,7 @@ requests==2.31.0
     #   requests-oauthlib
 requests-oauthlib==1.3.1
     # via django-allauth
-sentry-sdk==1.24.0
+sentry-sdk==1.25.0
     # via
     #   -r requirements.in
     #   django-q-sentry
@@ -267,7 +269,7 @@ tinycss2==1.1.1
     #   bleach
     #   cssselect2
     #   weasyprint
-typing-extensions==4.6.2
+typing-extensions==4.6.3
     # via
     #   asgiref
     #   qrcode
@@ -275,7 +277,7 @@ uritemplate==4.1.1
     # via
     #   coreapi
     #   drf-spectacular
-urllib3==1.26.16
+urllib3==2.0.2
     # via
     #   requests
     #   sentry-sdk
@@ -295,6 +297,8 @@ xlrd==2.0.1
     # via tablib
 xlwt==1.3.0
     # via tablib
+zipp==3.15.0
+    # via importlib-metadata
 zopfli==0.2.2
     # via fonttools
 
