--- a/setup.cfg
+++ b/setup.cfg
@@ -37,3 +37,6 @@ src_paths=InvenTree
 skip_glob =*/migrations/*.py
 known_django=django
 sections=FUTURE, STDLIB, DJANGO, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
+
+[tool.codespell]
+skip = 'docs/docs/stylesheets/bootstrap.css.map,docs/docs/javascripts,docs/docs/webfonts'
