use pre-commit for filtering instead

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,3 +48,9 @@ repos:
   rev: v2.2.4
   hooks:
   - id: codespell
+    exclude: >
+      (?x)^(
+          docs/docs/stylesheets/.*|
+          docs/docs/javascripts/.*|
+          docs/docs/webfonts/.*
+      )$
