--- a/requirements.in
+++ b/requirements.in
@@ -28,6 +28,7 @@ django-user-sessions                    # user sessions in DB
 django-weasyprint                       # django weasyprint integration
 djangorestframework                     # DRF framework
 django-xforwardedfor-middleware         # IP forwarding metadata
+dulwich                                 # pure Python git integration
 drf-spectacular                         # DRF API documentation
 feedparser                              # RSS newsfeed parser
 gunicorn                                # Gunicorn web server
