include contrib in docs

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -89,6 +89,7 @@ nav:
         - Development: start/bare_dev.md
     - Development:
         - Developing InvenTree: develop/starting.md
+        - Contributing: develop/contributing.md
         - Devcontainer: develop/devcontainer.md
     - Serving Files: start/serving_files.md
     - Data Backup: start/backup.md
